# ml-app

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml  static.yaml
configs/: logging.yaml
notebooks/: 01_data_analysis.ipynb
scripts/: setup_dev.sh
src/: __init__.py  data_loader.py  mlflow_tracking.py  model.py  predict.py  train.py  train_advanced.py  utils.py
src/api/: __init__.py  main.py  schemas.py
tests/: test_api.py  test_model.py
